--- a/we.html
+++ b/we.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Sites</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="we.css"/>
   </head>
   <body>
     <header>
