--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>мои лучшие работы</b></a>
-        <a class="link-nav" href="info.html"><b>полезная информация</b></a>
+        <a class="link-nav" href="mine.html"><b>мои лучшие работы</b></a>
+        <a class="link-nav" href="information.html"><b>полезная информация</b></a>
       </nav>
       <h1>Советы<br/></h1>
       <p>Записывайте все темы в тетрадь, поверьтевам очень пригодятся записи если вы что то забыли.</p>
